remove deprecated deployment scripts and documentation for Google Cloud and production environments, consolidate deployment information into primary resources